--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">BiSiEn</string>
+    <string name="app_name">MIM</string>
     <string name="tag_key_translation_z">translation_z</string>
 </resources>
